--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-/* Container Styles */
+/* Container Styles aaa*/
 .container {
     padding: 1.5rem;
     background: linear-gradient(135deg, #f0f4f8, #e2e8f0); /* Light gradient for the background */
